@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.7.13) unstable; urgency=low
   * fcgi-client: provide SCRIPT_FILENAME
   * fcgi-client: append empty PARAMS packet
   * fcgi-client: try to read response before request is finished
+  * fcgi-client: implement the STDERR packet
   * fcgi-stock: manage one socket per child process
 
  --
